# llm-finetuning

./: pyproject.toml  test.py
configs/: example.yaml
src/: config.py  modeling.py
src/data/: alpaca.py  processing.py
